; ModuleID = '/home/carl/AnghaBench/libgit2/tests/path/extr_core.c_test_path_core__isvalid_dot_git.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/path/extr_core.c_test_path_core__isvalid_dot_git.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c".git\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c".git/foo\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"foo/.git\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"foo/.git/bar\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"foo/.GIT/bar\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"foo/bar/.Git\00", align 1
@GIT_PATH_REJECT_DOT_GIT_LITERAL = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [5 x i8] c"!git\00", align 1
@.str.7 = private unnamed_addr constant [9 x i8] c"foo/!git\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"!git/bar\00", align 1
@.str.9 = private unnamed_addr constant [5 x i8] c".tig\00", align 1
@.str.10 = private unnamed_addr constant [9 x i8] c"foo/.tig\00", align 1
@.str.11 = private unnamed_addr constant [9 x i8] c".tig/bar\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_path_core__isvalid_dot_git() #0 {
  %1 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 0, i32 0)
  %2 = call i32 @cl_assert_equal_b(i32 1, i32 %1)
  %3 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 0)
  %4 = call i32 @cl_assert_equal_b(i32 1, i32 %3)
  %5 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0, i32 0)
  %6 = call i32 @cl_assert_equal_b(i32 1, i32 %5)
  %7 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i32 0, i32 0)
  %8 = call i32 @cl_assert_equal_b(i32 1, i32 %7)
  %9 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), i32 0, i32 0)
  %10 = call i32 @cl_assert_equal_b(i32 1, i32 %9)
  %11 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0), i32 0, i32 0)
  %12 = call i32 @cl_assert_equal_b(i32 1, i32 %11)
  %13 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_LITERAL, align 4
  %14 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 0, i32 %13)
  %15 = call i32 @cl_assert_equal_b(i32 0, i32 %14)
  %16 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_LITERAL, align 4
  %17 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 %16)
  %18 = call i32 @cl_assert_equal_b(i32 0, i32 %17)
  %19 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_LITERAL, align 4
  %20 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0, i32 %19)
  %21 = call i32 @cl_assert_equal_b(i32 0, i32 %20)
  %22 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_LITERAL, align 4
  %23 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i32 0, i32 %22)
  %24 = call i32 @cl_assert_equal_b(i32 0, i32 %23)
  %25 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_LITERAL, align 4
  %26 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), i32 0, i32 %25)
  %27 = call i32 @cl_assert_equal_b(i32 0, i32 %26)
  %28 = load i32, i32* @GIT_PATH_REJECT_DOT_GIT_LITERAL, align 4
  %29 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0), i32 0, i32 %28)
  %30 = call i32 @cl_assert_equal_b(i32 0, i32 %29)
  %31 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i32 0, i32 0)
  %32 = call i32 @cl_assert_equal_b(i32 1, i32 %31)
  %33 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.7, i64 0, i64 0), i32 0, i32 0)
  %34 = call i32 @cl_assert_equal_b(i32 1, i32 %33)
  %35 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0), i32 0, i32 0)
  %36 = call i32 @cl_assert_equal_b(i32 1, i32 %35)
  %37 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i64 0, i64 0), i32 0, i32 0)
  %38 = call i32 @cl_assert_equal_b(i32 1, i32 %37)
  %39 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.10, i64 0, i64 0), i32 0, i32 0)
  %40 = call i32 @cl_assert_equal_b(i32 1, i32 %39)
  %41 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.11, i64 0, i64 0), i32 0, i32 0)
  %42 = call i32 @cl_assert_equal_b(i32 1, i32 %41)
  ret void
}

declare dso_local i32 @cl_assert_equal_b(i32, i32) #1

declare dso_local i32 @git_path_isvalid(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
